# CryptCast

./: .gitignore  Cargo.toml  README.md  package.json
crates/b-tauri/: Cargo.toml  tauri.conf.json
crates/f-wasm/: Cargo.toml  package.json
crates/f-wasm/src/components/: footer.rs  header.rs  mod.rs  podcast_list.rs  podcast_preview.rs
crates/f-wasm/src/routes/: editor.rs  mod.rs  profile.rs
crates/f-wasm/src/routes/home/: banner.rs  main_view.rs  mod.rs
crates/f-wasm/src/routes/podcast/: comment_input.rs  comment_list.rs  delete_button.rs  mod.rs  podcast_actions.rs  podcast_meta.rs
crates/f-wasm/src/services/: comments.rs  mod.rs  podcasts.rs
crates/f-wasm/src/types/: mod.rs  podcasts.rs
crates/f-wasm/static/: index.html
crates/f-wasm/tests/: web.rs
