[package]
name = "cryptcast"
version = "0.1.0"
authors = ["xTeKc <>"]
description = "A decentralized podcast platform."
categories = [""]
homepage = "https://github.com/xTeKc/cryptcast"
keywords = [
    "",
    ]
repository = "https://github.com/xTeKc/cryptcast"
readme = "README.md"
license = "MPL-2.0"
build = "build.rs"
edition = "2021"

[[bin]]
name = "cryptcast"
path = "src/main.rs"

[dependencies]


[profile-release]
#lto = true
#codegen-units = 1