[package]
name = "b-tauri"
version = "0.1.0"
description = ""
authors = ["xTeKc <>"]
license = "MPL-2.0"
repository = ""
default-run = "b-tauri"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-rc.4", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
